[package]
name = "aegis-edge-relay"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
h2 = "0.4"
rustls = "0.23"
rustls-native-certs = "0.8"
tokio = { version = "1.44", features = ["full"] }
tokio-rustls = "0.26"
tokio-tungstenite = "0.24"
webpki-roots = "0.26"
